--- a/views/favorites.handlebars
+++ b/views/favorites.handlebars
@@ -13,25 +13,9 @@
         </li>
       </ul>
     </div>
-    <div class="row">
-      <div class="col-8 offset-2">
-        <h1><span class="title">Cocktail Party!</span></h1>
-        <form class="pure-container mb-4" action="POST">
-          <div class="form-group">
-            <label for="drink-search">Find Your Next Drink Here:</label>
-            <input type="search" id="drink-search" class="form-control" aria-describedby="drink-search"
-              placeholder="Margarita">
-            <button class="pure-button">
-              <i class="fa fa-hourglass">Search</i>
-            </button>
-          </div>
-          <div class="form-group">
-            <label for="example-description">modal here for drinks to show</label>
-            <img class="modal" id="placeholder-img" href="https://placeholder.com/"><img
-              src="https://via.placeholder.com/150"></a>
-          </div>
-          <button id="submit" class="btn btn-primary float-right">Submit</button>
-        </form>
+    <div>
+      <h1>Your Favorite Cocktails!</h1>
+    </div>
         <h3>Footer goes here</h3>
         <ul id="example-list" class="list-group">
           {{#each examples}}
