--- a/views/favorites.handlebars
+++ b/views/favorites.handlebars
@@ -14,18 +14,17 @@
       </ul>
     </div>
     <div>
-      <h1>Your Favorite Cocktails!</h1>
+      <h1 class="favsTitle">Your Favorite Cocktails!</h1>
     </div>
+    <div class="pure-g">
+      <div class="pure-u-1-3"><p>Thirds</p></div>
+      <div class="pure-u-1-3"><p>Thirds</p></div>
+      <div class="pure-u-1-3"><p>Thirds</p></div>
+    </div>
+    <div class="footer">
         <h3>Footer goes here</h3>
-        <ul id="example-list" class="list-group">
-          {{#each examples}}
-          <li data-id="{{this.id}}" class="list-group-item">
-            <a href="example/{{this.id}}">{{this.text}}</a>
-            <button class="btn btn-danger float-right delete">ｘ</button>
-          </li>
-          {{/each}}
-        </ul>
-      </div>
+    </div>
+    </div>
     </div>
   </div>
 </div>
