--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,4 +1,4 @@
-body {
+body, html {
   background-image: url("../styles/images/drink.jpg");
   height: 100%;
   background-position: center;
@@ -7,8 +7,10 @@ body {
 }
 
 .pure-img-responsive {
-  max-width: 100%;
+  max-width: 75%;
   height: auto;
+  padding: 2px;
+
 }
 
 /*
@@ -52,14 +54,15 @@ The content `<div>` is where all your content goes.
 }
 
 .header {
-   margin: 0;
+   margin-top: 0;
    color: white;
    text-align: center;
-   padding: 2.5em 2em 0;
+   padding: 0;
    border-bottom: 1px solid #eee;
+   font-size: 30px;
 }
   .header h1 {
-      margin: 0.2em 0;
+      margin-bottom: 0.2em 0;
       font-size: 3em;
       font-weight: 300;
   }
@@ -74,6 +77,16 @@ The content `<div>` is where all your content goes.
   margin: 50px 0 20px 0;
   font-weight: 300;
   color:white;
+}
+
+.pure-form {
+  text-align: center;
+  padding-top: 10px;
+}
+
+.pure-g {
+  text-align: center;
+  margin: 10px;
 }
 
 
