--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html>
- 
 <head>
-    <title></title>
+    <title>Signup</title>
 </head>
  
-<body>
-    <form id="signup" name="signup" method="post" action="/signup">
-        <label for="email">Email Address</label>
+<body class="signup">
+    <form class="signup-form" id="signup" name="signup" method="post" action="/signup">
+        <div class="signup-text">Sign up for Free!</div>
+        <label for="email" class="signup-text">Email Address</label>
         <input class="text" name="email" type="email" />
-        <label for="firstname">Firstname</label>
+        <label for="firstname" class="signup-text">Firstname</label>
         <input name="firstname" type="text" />
-        <label for="lastname">Lastname</label>
+        <label for="lastname" class="signup-text">Lastname</label>
         <input name="lastname" type="text" />
-        <label for="password">Password</label>
+        <label for="password" class="signup-text">Password</label>
         <input name="password" type="password" />
-        <input class="btn" type="submit" value="Sign Up" />
+        <input class="btn" id="signup-button" type="submit" value="Sign Up" />
     </form>
  
 </body>
