--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -26,11 +26,15 @@
             </button>
           </div>
           <div class="form-group">
-            <label for="example-description">modal here for drinks to show</label>
-            <img class="modal" id="placeholder-img" href="https://placeholder.com/"><img
-              src="https://via.placeholder.com/150"></a>
           </div>
-          <button id="submit" class="btn btn-primary float-right">Submit</button>
+        <div class="swiper-container">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide" style="background-image:url(https://via.placeholder.com/150)"></div>
+            <div class="swiper-slide" style="background-image:url(https://via.placeholder.com/150)"></div>
+            <div class="swiper-slide" style="background-image:url(https://via.placeholder.com/150)"></div>
+          </div>
+          <div class="swiper-pagination"></div>
+        </div>
         </form>
         <h3>Footer goes here</h3>
         <ul id="example-list" class="list-group">
@@ -45,6 +49,3 @@
     </div>
   </div>
 </div>
-
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="/js/index.js"></script>
