--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -109,8 +109,7 @@ body {
   background-size: cover;
   width: 300px !important;
   height: 300px !important;
-=======
-
+}
 .header {
    margin-top: 0;
    color: white;
