Fixed input text, images

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -27,15 +27,11 @@
 
     <div class="row">
       <div class="col-8 offset-2">
-        <h1><span class="title">Cocktail Party!</span></h1>
         <form class="pure-container mb-4" action="POST">
-          <div class="form-group">
-            <label for="drink-search">Find Your Next Drink Here:</label>
-            <input type="search" id="drink-search" class="form-control" aria-describedby="drink-search"
-              placeholder="Margarita">
-            <button class="pure-button">
-              <i class="fa fa-hourglass">Search</i>
-            </button>
+          <form class="pure-form"> 
+       <input type="text" class="pure-input-squared" placeholder="Margarita"> 
+       <button type="submit" class="pure-button">Search</button> 
+     </form>
           </div>
           <div class="form-group">
           </div>
@@ -61,39 +57,29 @@
     </div>
   </div>
 </div>
+   {{!-- <div class="pure-g">
+      <div class="pure-u-1-4">
+        <img class="pure-img-responsive" src="http://farm3.staticflickr.com/2875/9069037713_1752f5daeb.jpg" alt="Peyto Lake">
+      </div>
+      <div class="pure-u-1-4">
+        <img class="pure-img-responsive" src="http://farm3.staticflickr.com/2813/9069585985_80da8db54f.jpg" alt="Train">
+      </div>
+      <div class="pure-u-1-4">
+        <img class="pure-img-responsive" src="http://farm6.staticflickr.com/5456/9121446012_c1640e42d0.jpg" alt="T-Shirt Store">
+      </div>
+      <div class="pure-u-1-4">
+       <img class="pure-img-responsive" src="http://farm6.staticflickr.com/5456/9121446012_c1640e42d0.jpg" alt="T-Shirt Store">
+      </div>
+    </div>
+  </div> --}}
 
 
-    
- //   <form class="pure-form">
- //     <input type="text" class="pure-input-squared">
- //     <button type="submit" class="pure-button">Search</button>
- //   </form>
-    
-  
-
- //   <div class="pure-g">
-  //    <div class="pure-u-1-4">
-  //      <img class="pure-img-responsive" src="http://farm3.staticflickr.com/2875/9069037713_1752f5daeb.jpg" alt="Peyto Lake">
-  //    </div>
- //     <div class="pure-u-1-4">
- //       <img class="pure-img-responsive" src="http://farm3.staticflickr.com/2813/9069585985_80da8db54f.jpg" alt="Train">
- //     </div>
- //     <div class="pure-u-1-4">
- //       <img class="pure-img-responsive" src="http://farm6.staticflickr.com/5456/9121446012_c1640e42d0.jpg" alt="T-Shirt Store">
- //     </div>
- //     <div class="pure-u-1-4">
- //       <img class="pure-img-responsive" src="http://farm6.staticflickr.com/5456/9121446012_c1640e42d0.jpg" alt="T-Shirt Store">
- //     </div>
- //   </div>
- // </div>
-
-
-//<script src="/combo/1.18.13?/js/ui.js"></script>
+{{!-- //<script src="/combo/1.18.13?/js/ui.js"></script>
 
 
 //</body>
 
 //<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 //<script src="/js/index.js"></script>
-//<script src="/test/drinkapi.js"></script>
+//<script src="/test/drinkapi.js"></script> --}}
 
