--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -34,14 +34,14 @@ body, html {
   padding: 20px;
   text-align: center;
 }
+.signup-form input{
+  color: black;
+}
 .signup-text {
     text-align: center;
     color: rgb(241, 229, 232);
     font-size: 40px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
-}
-#signup-button {
-  background-color: #333;
 }
 /*
 Add transition to containers so they can push in and out.
@@ -82,23 +82,23 @@ The content `<div>` is where all your content goes.
   margin-bottom: 50px;
   line-height: 1.6em;
 }
-.title {
+.header {
   background-image: linear-gradient(to right, red,orange,yellow,green,blue,indigo,violet);
-  background-image: gradient( linear, left top, right top, color-stop(0, #f22), color-stop(0.15, #f2f), color-stop(0.3, #22f), color-stop(0.45, #2ff), color-stop(0.6, #2f2),color-stop(0.75, #2f2), color-stop(0.9, #ff2), color-stop(1, #f22) );
+  background-image: gradient(linear, left top, right top, color-stop(0, #f22), color-stop(0.15, #f2f), color-stop(0.3, #22f), color-stop(0.45, #2ff), color-stop(0.6, #2f2),color-stop(0.75, #2f2), color-stop(0.9, #ff2), color-stop(1, #f22) );
   color:transparent;
  -webkit-background-clip: text;
   background-clip: text;
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-  font-size: 35px;
+  font-size: 40px;
 }
-body {
+/* body {
   background: #fff;
   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
   font-size: 14px;
   color:#000;
   margin: 0;
   padding: 0;
-}
+} */
 .swiper-container {
   width: 100%;
   padding-top: 50px;
@@ -109,14 +109,6 @@ body {
   background-size: cover;
   width: 300px !important;
   height: 300px !important;
-}
-.header {
-   margin-top: 0;
-   color: white;
-   text-align: center;
-   padding: 0;
-   border-bottom: 1px solid #eee;
-   font-size: 30px;
 }
   .header h1 {
       margin-bottom: 0.2em 0;
