--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -10,8 +10,8 @@
       <a class="pure-menu-heading" href="#">Drink Menu</a>
 
       <ul class="pure-menu-list">
-        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Home</a></li>
-        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Favorites</a></li>
+        <li class="pure-menu-item"><a href="/" class="pure-menu-link">Home</a></li>
+        <li class="pure-menu-item"><a href="/favorites" class="pure-menu-link">Favorites</a></li>
         <li class="pure-menu-item"><a href="#" class="pure-menu-link">Pantry</a></li>
 
         
