--- a/views/signin.handlebars
+++ b/views/signin.handlebars
@@ -5,14 +5,14 @@
     <title></title>
 </head>
  
-<body>
-    <form id="signin" name="signin" method="post" action="signin">
-        <label for="email">Email Address</label>
+<body class="signup">
+    <form class="signup-form" id="signin" name="signin" method="post" action="signin">
+        <label class="signup-text" for="email">Email Address</label>
         <input class="text" name="email" type="text" />
-        <label for="password">Password</label>
+        <label class="signup-text" for="password">Password</label>
         <input name="password" type="password" />
-        <input class="btn" type="submit" value="Sign In" />
-    </form>
+        <input class="btn" id="signup-button" type="submit" value="Sign In" />
+    </formclass="signup-form">
  
 </body>
  
