--- a/views/favorites.handlebars
+++ b/views/favorites.handlebars
@@ -1,3 +1,4 @@
+<body class="index">
 <div id="layout">
     <!-- Menu toggle -->
     <a href="#menu" id="menuLink" class="menu-link">
@@ -7,12 +8,13 @@
 
     <div id="menu">
         <div class="pure-menu">
-            <a class="pure-menu-heading" href="#">Drink Menu</a>
+            <a class="pure-menu-heading" href="/">Drink Menu</a>
 
             <ul class="pure-menu-list">
-                <li class="pure-menu-item"><a href="#" class="pure-menu-link">Home</a></li>
-                <li class="pure-menu-item"><a href="#" class="pure-menu-link">Favorites</a></li>
+                <li class="pure-menu-item"><a href="/" class="pure-menu-link">Home</a></li>
+                <li class="pure-menu-item"><a href="/favorites" class="pure-menu-link">Favorites</a></li>
                 <li class="pure-menu-item"><a href="#" class="pure-menu-link">Pantry</a></li>
+                <li class="pure-menu-item"><a href="/logout" class="pure-menu-link">Logout</a></li>
             </ul>
         </div>
     </div>
@@ -67,3 +69,4 @@
         </div>
     </div>
 </div>
+</body>
