--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -30,24 +30,21 @@
 
     <div class="row">
       <div class="col-8 offset-2">
-        <form class="pure-container mb-4" action="POST">
+        <form class="pure-container mb-4">
           <form class="pure-form"> 
-       <input type="text" class="pure-input-squared" placeholder="Margarita"> 
-       <button type="submit" class="pure-button">Search</button> 
+       <input type="text" id="drinkName" class="pure-input-squared" placeholder="Margarita"> 
+       <button type="button" id="searchButton" class="pure-button">Search</button> 
      </form>
           </div>
           <div class="form-group">
           </div>
         <div class="swiper-container">
-          <div class="swiper-wrapper">
-            <div class="swiper-slide" style="background-image:url(https://via.placeholder.com/150)"></div>
-            <div class="swiper-slide" style="background-image:url(https://via.placeholder.com/150)"></div>
-            <div class="swiper-slide" style="background-image:url(https://via.placeholder.com/150)"></div>
+          <div class="swiper-wrapper" id="drinkImages">
           </div>
           <div class="swiper-pagination"></div>
         </div>
         </form>
-        <h3>Footer goes here</h3>
+        <h3></h3>
         <ul id="example-list" class="list-group">
           {{#each examples}}
           <li data-id="{{this.id}}" class="list-group-item">
