fixed background tried to add migration

--- a/views/favorites.handlebars
+++ b/views/favorites.handlebars
@@ -1,3 +1,4 @@
+<html class="index">
 <body class="index">
 <div id="layout">
     <!-- Menu toggle -->
@@ -35,3 +36,4 @@
     </div>
 </div>
 </body>
+</htmlclass="index">
