--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,3 +1,4 @@
+<html class="index">
 <body class="index">
 <div id="layout">
   <!-- Menu toggle -->
@@ -58,6 +59,7 @@
   </div>
 </div>
 </body>
+</html>
    {{!-- <div class="pure-g">
       <div class="pure-u-1-4">
         <img class="pure-img-responsive" src="http://farm3.staticflickr.com/2875/9069037713_1752f5daeb.jpg" alt="Peyto Lake">
