--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -28,7 +28,6 @@
       <h1>Cocktail Party</h1>
     </div>
 
-    <div class="row">
       <div class="col-8 offset-2">
         <form class="pure-container mb-4">
           <form class="pure-form"> 
@@ -38,10 +37,8 @@
           </div>
           <div class="form-group">
           </div>
-        <div class="swiper-container">
-          <div class="swiper-wrapper" id="drinkImages">
+          <div id="drinkImages">
           </div>
-          <div class="swiper-pagination"></div>
         </div>
         </form>
         <h3></h3>
