--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -31,7 +31,7 @@
       <div class="col-8 offset-2">
         <form class="pure-container mb-4">
           <form class="pure-form"> 
-       <input type="text" id="drinkName" class="pure-input-squared" placeholder="Margarita"> 
+       <input type="text" id="drinkName" class="pure-input-squared" value="Margarita"> 
        <button type="button" id="searchButton" class="pure-button">Search</button> 
      </form>
           </div>
