--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -91,8 +91,15 @@ The content `<div>` is where all your content goes.
 #drinkImages img {
   width: 400px;
   height: 400px;
+  display: block;
 }
 
+#drinkImages p {
+  color: white;
+  font-size: 25px;
+  background-color: black;
+  display: inline-block;
+}
 
 #drinkImages>div {
     margin: 20px;
@@ -100,11 +107,11 @@ The content `<div>` is where all your content goes.
 }
 
 #drinkImages button {
-  display: block;
+  display: inline-block;
 }
 
 button {
-  margin: 5px;
+  padding: 10px;
 }
 
 
