--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,10 +1,10 @@
-.index {
-  background-image: url("../styles/images/drink.jpg");
+html, body {
+  background-color: #000000;
+  /* background-image: url("../styles/images/drink.jpg");
   height: 100%;
   background-position: center;
   background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: 100%;
+  background-size: 100%; */
 }
 
 .pure-img-responsive {
@@ -89,8 +89,8 @@ The content `<div>` is where all your content goes.
 }
 
 #drinkImages img {
-  width: 400px;
-  height: 400px;
+  width: 100%;
+  height: 100%;
   display: block;
 }
 
@@ -304,6 +304,17 @@ small screens.
           margin-top: 0.6em;
       }
 
+#main {
+  margin: auto;
+}
+
+.drink-buttons {
+  margin-top: 20px;
+}
+
+.drink-search-button {
+  margin-left: 20px;
+}
 
 
 
