--- a/views/favorites.handlebars
+++ b/views/favorites.handlebars
@@ -14,19 +14,19 @@
             <ul class="pure-menu-list">
                 <li class="pure-menu-item"><a href="/" class="pure-menu-link">Home</a></li>
                 <li class="pure-menu-item"><a href="/favorites" class="pure-menu-link">Favorites</a></li>
-                <li class="pure-menu-item"><a href="#" class="pure-menu-link">Pantry</a></li>
+                {{!-- <li class="pure-menu-item"><a href="#" class="pure-menu-link">Pantry</a></li> --}}
                 <li class="pure-menu-item"><a href="/logout" class="pure-menu-link">Logout</a></li>
             </ul>
         </div>
     </div>
 
     <div id="main">
-        <div class="header">
+        <div class="header text-center">
             <h1>Your Favorite Cocktails</h1>
             
         </div>
 
-        <div class="content">
+        <div class="content text-center">
             <h2 class="content-subhead">DRINK IMAGES GO HERE</h2>
 
             <div class="pure-g">
