--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,4 @@
-<html>
+<html class="index">
 <body class="index">
 <div id="layout">
   <!-- Menu toggle -->
@@ -14,7 +14,7 @@
       <ul class="pure-menu-list">
         <li class="pure-menu-item"><a href="/" class="pure-menu-link">Home</a></li>
         <li class="pure-menu-item"><a href="/favorites" class="pure-menu-link">Favorites</a></li>
-        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Pantry</a></li>
+        {{!-- <li class="pure-menu-item"><a href="#" class="pure-menu-link">Pantry</a></li> --}}
         <li class="pure-menu-item"><a href="/signin" class="pure-menu-link">Sign In</a></li>
         <li class="pure-menu-item"><a href="/signup" class="pure-menu-link">Sign Up</a></li>
 
@@ -28,7 +28,6 @@
     <div class="header text-center">
       <h1>Cocktail Party</h1>
     </div>
-
       <div class="text-center">
         <form class="pure-container mb-4">
           <div class="row">
@@ -65,29 +64,4 @@
 </div>
 </body>
 </html>
-   {{!-- <div class="pure-g">
-      <div class="pure-u-1-4">
-        <img class="pure-img-responsive" src="http://farm3.staticflickr.com/2875/9069037713_1752f5daeb.jpg" alt="Peyto Lake">
-      </div>
-      <div class="pure-u-1-4">
-        <img class="pure-img-responsive" src="http://farm3.staticflickr.com/2813/9069585985_80da8db54f.jpg" alt="Train">
-      </div>
-      <div class="pure-u-1-4">
-        <img class="pure-img-responsive" src="http://farm6.staticflickr.com/5456/9121446012_c1640e42d0.jpg" alt="T-Shirt Store">
-      </div>
-      <div class="pure-u-1-4">
-       <img class="pure-img-responsive" src="http://farm6.staticflickr.com/5456/9121446012_c1640e42d0.jpg" alt="T-Shirt Store">
-      </div>
-    </div>
-  </div> --}}
-
-
-{{!-- //<script src="/combo/1.18.13?/js/ui.js"></script>
-
-
-//</body>
-
-//<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-//<script src="/js/index.js"></script>
-//<script src="/test/drinkapi.js"></script> --}}
-
+  
