--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -34,7 +34,7 @@
             <div class="col-md-6 offset-md-3">
               <form class="pure-form">
                 <div class="input-group">
-                  <input type="text" id="drinkName" class="form-control" value="Margarita"> 
+                  <input type="text" id="drinkName" class="form-control" placeholder="What do you want to drink?"> 
                   <button type="button" id="searchButton" class="pure-button drink-search-button">Search</button> 
                 </div> 
               </form>
